[gd_scene load_steps=8 format=3 uid="uid://bkfi0uamifat3"]

[ext_resource type="Texture2D" uid="uid://4i1pdd2vao42" path="res://Assets/sprites/NPC folder/stranger.png" id="1_7hq1g"]
[ext_resource type="Script" path="res://Dialogue/stranger_npc.gd" id="1_n7uk3"]
[ext_resource type="PackedScene" uid="uid://cbp4w38v76psn" path="res://Dialogue/stranger_d.tscn" id="2_7knsu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lcveu"]
atlas = ExtResource("1_7hq1g")
region = Rect2(96, 0, 96, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ni2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcveu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evaw8"]
size = Vector2(6.5, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vijxv"]
radius = 12.0
height = 50.0

[node name="Stranger NPC" type="CharacterBody2D"]
script = ExtResource("1_n7uk3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(45.25, 63.75)
scale = Vector2(0.244792, 0.236979)
sprite_frames = SubResource("SpriteFrames_2ni2b")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(47.75, 68)
shape = SubResource("RectangleShape2D_evaw8")

[node name="chat_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection"]
position = Vector2(46, 72)
shape = SubResource("CapsuleShape2D_vijxv")

[node name="Stranger_D" parent="." instance=ExtResource("2_7knsu")]
offset_left = 28.0
offset_top = 33.0
offset_right = 31.0
offset_bottom = 33.0

[connection signal="body_entered" from="chat_detection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chat_detection" to="." method="_on_chat_detection_body_exited"]
